--- a/the-static-web/sonnet/index.html
+++ b/the-static-web/sonnet/index.html
@@ -5,7 +5,7 @@
 	<title>Sonnet Exercise</title>
 </head>
 <body>
-
+	<h1 style="font-size:20px"><i>"Sonnet 97"</i></h1>
 	<div id="sonnet">
 		How like a winter hath my absence been
 		From thee, the pleasure of the fleeting year!
@@ -19,12 +19,11 @@
 		But hope of orphans, and unfathered fruit;
 		For summer and his pleasures wait on thee,
 		And, thou away, the very birds are mute:
-		Or, if they sing, 'tis with so dull a cheer,
-		That leaves look pale, dreading the winter's near.
+			Or, if they sing, 'tis with so dull a cheer,
+			That leaves look pale, dreading the winter's near.
 	</div>
-	
+	<p><b>-- William Shakespeare --</b></p>
+
+	<script type="text/javascript" src="sonnet.js"></script>
 </body>
-<footer>
-	
-</footer>
 </html>
