updated banking validation

--- a/the-static-web/validate-application/index.html
+++ b/the-static-web/validate-application/index.html
@@ -13,96 +13,109 @@
 
 <body>
 
-      <header><h1>This is a basic form</h1></header>
+      <header>
+      <h1>This is a basic form</h1>
+      </header>
 
       <form>
 
-      <fieldset>
+        <fieldset>
 
-          <legend>Your Information</legend>
+            <legend>Your Information</legend>
 
-            <label for="first-name">First Name:</label>
-            <input type="text" name="first-name">
+              <label for="first-name">First Name:</label>
+              <input type="text" name="first-name">
 
-            <label for="middle-initial">Middle Initial:</label>
-            <input type="text" name="middle-initial">
+              <label for="middle-initial">Middle Initial:</label>
+              <input type="text" name="middle-initial">
 
-            <label for="last-name">Last Name:</label>
-            <input type="text" name="last-name">
+              <label for="last-name">Last Name:</label>
+              <input type="text" name="last-name">
 
-            <br/>
+              <br>
 
-            <label for="address">Address:</label>
-            <input type="address" name="address">
+              <label for="address">Address:</label>
+              <input type="address" name="address">
 
-            <br />
+              <br>
 
-            <label for="occupation">Occupation:</label>
-            <input type="text" name="occupation">
+              <label for="occupation">Occupation:</label>
+              <input type="text" name="occupation">
 
-            <br />
+              <br>
 
-            <label for="employer">Employer:</label>
-            <input type="text" name="employer">
+              <label for="employer">Employer:</label>
+              <input type="text" name="employer">
 
-            <br />
-            
-            <label for="employer-address">Employer Address:</label>
-            <input type="text" name="employer-address">
+              <br>
+              
+              <label for="employer-address">Employer Address:</label>
+              <input type="text" name="employer-address">
 
-      </fieldset><br />
-      <fieldset>
-            <label for="loan">Select your type of loan:</label>
-            <select>
-              <option value="Commercial">i. Commercial</option>
-              <option value="Real Estate">ii. Real Estate</option>
-              <option value="Personal">iii. Personal</option>
-              <option value="Mortgage">iv. Mortgage</option>
-            </select>
+        </fieldset>
 
-            <br />
+        <br><br>
 
-            <label for="loan_amount">Request Amount of Loan:</label>
-            <input type="text" name="loan_amount">
+        <fieldset>
 
-            <br /><br />
+            <legend>Type of Loan</legend>
+              <label for="loan">Select your type of loan:</label>
+              <select>
+                <option value="Commercial">i. Commercial</option>
+                <option value="Real Estate">ii. Real Estate</option>
+                <option value="Personal">iii. Personal</option>
+                <option value="Mortgage">iv. Mortgage</option>
+              </select>
 
-            <fieldset>
-            <label for="loan_length">Length of Loan:</label><br />
-            <input type="radio" name="loan_length" value="5years"> i. 5 years <br />
-            <input type="radio" name="loan_length" value="15years"> ii. 15 years <br />
-            <input type="radio" name="loan_length" value="30years"> iii. 30 years <br />
-            </fieldset>
+              <br>
 
-            <br />
+              <label for="loan_amount">Request Amount of Loan:</label>
+              <input type="text" name="loan_amount">
 
-            <fieldset>
-            <label for="special_conditions">Special Conditions:</label><br />
-            <input type="checkbox" name="downpayment"> i. Downpayment<br />
-            <input type="checkbox" name="out_of_state_resident"> ii. Out-of-State Resident<br />
-            <input type="checkbox" name="married">iii. Married<br />
-            <input type="checkbox" name="cosigner">iv. Loan will be co-signed<br />
-            </fieldset>
-            </fieldset>
+              <br><br>
 
-            <br />
-            <fieldset>
+              <fieldset>
+                <label for="loan_length">Length of Loan:</label><br />
+                <input type="radio" name="loan_length" value="5years"> i. 5 years <br>
+                <input type="radio" name="loan_length" value="15years"> ii. 15 years <br>
+                <input type="radio" name="loan_length" value="30years"> iii. 30 years <br>
+              </fieldset>
+
+              <br>
+
+              <fieldset>
+                <label for="special_conditions">Special Conditions:</label>
+                <br>
+                <input type="checkbox" name="downpayment"> i. Downpayment
+                <br>
+                <input type="checkbox" name="out_of_state_resident"> ii. Out-of-State Resident
+                <br>
+                <input type="checkbox" name="married">iii. Married
+                <br>
+                <input type="checkbox" name="cosigner">iv. Loan will be co-signed
+                <br>
+              </fieldset>
+          </fieldset>
+
+              <br><br>
+
+          <fieldset>
             Additional Information:<br>
             <textarea></textarea>
 
-            <br />
+            <br>
 
-            <label for="email">Email:</label><br />
-            <input type="email" name="email" placeholder="Maxsample@sample.com"><br />
+            <label for="email">Email:</label><br>
+            <input type="email" name="email" placeholder="Max_Sample@sample.com"><br>
 
-            <label for="telephone">Enter your phone:</label><br />
-            <input type="tel" name="telephone" placeholder="615-555-555"><br />
+            <label for="telephone">Enter your phone:</label><br>
+            <input type="tel" name="telephone" placeholder="615-555-555"><br>
 
-            <label for="linkedin_profile">Linkedin Profile:</label><br />
+            <label for="linkedin_profile">Linkedin Profile:</label><br>
             <input type="url" name="linkedin">
-
-            <br />
-</fieldset></fieldset></form>
+          </fieldset>
+            <br>s
+    </form>
 
 </body>
 </html>
